// 首行指定proto语法版本，默认选用proto2
syntax = "proto3";

option py_generic_services  = true;


/*
定义传入的request字段
*/
message UserRequest {
    string user_id=1;
    int32 channel_id=2;
    int32 article_num=3;
    int64 time_stamp=4;
}

/*
定义返回的reponse字段
*/
message Track {
    string click=1;
    string collect=2;
    string share=3;
    string read=4;
}
message Article {
    int64 article_id=1;
    Track track=2;
}
message ArticleResponse {

    string exposure=1;
    int64 time_stamp=2;
    repeated Article recommends=3;
}

/*
对request和response建立gRPC服务链接
*/
service UserRecommend {

    rpc user_recommend(UserRequest) returns(ArticleResponse) {
    }
}

//end